2009-09-30  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #542959
	* delegate.cs: Emit correct delegate instance variable when there
	are static and non-static overloads.

2009-09-25  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: More dynamic binary expressions.

2009-09-22  Marek Safar  <marek.safar@gmail.com>

	* nullable.cs, expression.cs: Fixed null lifted conversion for
	bitwise enum operations.

2009-09-22  Marek Safar  <marek.safar@gmail.com>

	* convert.cs, ecore.cs: Fixed explicit unsafe coversion of long
	values in checked context.

2009-09-22  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: Fixed array index constant conversion.

2009-09-20  Miguel de Icaza  <miguel@novell.com>

	* expression.cs: Do not crash when MemberLookup returns something
	that is not a MemberExpr here.   Report error 582 instead. 

	Fixes #499988.

2009-09-18  Marek Safar  <marek.safar@gmail.com>

	* decl.cs, class.cs: Check protected property accessors.

2009-09-18  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, assign.cs: Dynamic compound assignment.

2009-09-17  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Fixed compound assignment explicit conversion.

2009-09-17  Marek Safar  <marek.safar@gmail.com>

	* expression.cs, ecore.cs: Cannot infer variables from method group.

2009-09-16  Marek Safar  <marek.safar@gmail.com>

	* argument.cs, dynamic.cs, convert.cs, context.cs, anonymous.cs,
	constant.cs, nullable.cs, expression.cs, literal.cs, ecore.cs,
	codegen.cs: Dynamic binary operations scaffolding.

2009-09-15  Marek Safar  <marek.safar@gmail.com>

	* expression.cs: Fixes nullable promotion for enum type variables.

2009-09-11  Marek Safar  <marek.safar@gmail.com>

	* driver.cs, dynamic.cs: Reset more static variables.

2009-09-11  Marek Safar  <marek.safar@gmail.com>

	* dynamic.cs, expression.cs, rootcontext.cs, namespace.cs, ecore.cs,
	driver.cs: Introduced Expression::MakeExpression.
