@@ -1,3 +1,11 @@
+2009-10-02  Marek Safar  <marek.safar@gmail.com>
+
+	* ecore.cs: Don't crash on overloads with optional paremeters where
+	arguments count overflows.
+	
+	* parameter.cs: Import optional parameter constants using optional
+	value type.
+
 2009-09-30  Marek Safar  <marek.safar@gmail.com>
 
 	A fix for bug #542959
